[gd_scene load_steps=4 format=3 uid="uid://d07ctqchxlaoo"]

[ext_resource type="Script" path="res://Scenes/Item/item.gd" id="1_gkqt6"]
[ext_resource type="Texture2D" uid="uid://c03mmga1bcib5" path="res://icon.svg" id="1_kep4i"]
[ext_resource type="PackedScene" uid="uid://d06s1q41r5ogm" path="res://Scenes/ItemDetails/item_details.tscn" id="3_fyegc"]

[node name="Item" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_gkqt6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ItemButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_kep4i")

[node name="BuyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Buy"

[node name="ItemDetails" parent="." instance=ExtResource("3_fyegc")]

[connection signal="pressed" from="VBoxContainer/ItemButton" to="." method="_on_item_button_pressed"]
